--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
 <b><big>Представляю вам свою первую страницу</b></big>
 <BR>Хотел бы написать про <i>клан любителей обезьян</i>
 <BR><b><i>Monke Clan</b></i> — клан любителей обезьян(во всех их образах и видах)
-<p><img src="monke.jpg"
+<p><img src="monke.jpg"></p>
 <BR>так же мы очень уважаем горил 
-<p><a href="gorilla.html"><img src="angry-gorilla.jpg"title="Горилла"><img src="gorilla.jpg">
+<BR>
+<p><a href="gorilla.html"><img src="angry-gorilla.jpg"title="Горилла"><img src="gorilla.jpg"></p>
+
 <BR>спасибо за внимание
 </body>
 </html>
