--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-<head><title>Елисеев Лабораторная 1</title></head>
+<head><title>Елисеев Лабораторная 2</title></head>
 <body>
 <b><big>Представляю вам свою первую страницу</b></big>
 <BR>Хотел бы написать про <i>клан любителей обезьян</i>
@@ -7,7 +7,7 @@
 <p><img src="monke.jpg"></p>
 <BR>так же мы очень уважаем горил 
 <BR>
-<p><a href="gorilla.html"><img src="angry-gorilla.jpg"title="Горилла"><img src="gorilla.jpg"></p>
+<p><a href="gorilla.html"><img src="angry-gorilla.jpg"title="Горилла"><a href="gorilla.html"><img src="gorilla.jpg"></p>
 
 <BR>спасибо за внимание
 </body>
