--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <b><big>Представляю вам свою первую страницу</b></big>
 <BR>Хотел бы написать про <i>клан любителей обезьян</i>
 <BR><b><i>Monke Clan</b></i> — клан любителей обезьян(во всех их образах и видах)
-<p><img src="monke.jpg"></p>
+<p><img src="monke.jpg"><a href="monke.html"></p>
 <BR>так же мы очень уважаем горил 
 <BR>
 <p><a href="gorilla.html"><img src="angry-gorilla.jpg"title="Горилла"><a href="gorilla.html"><img src="gorilla.jpg"></p>
