--- a/gorilla.html
+++ b/gorilla.html
@@ -3,11 +3,11 @@
 <body>
 <i>Гориллы это приматы</i>
 <BR>
-<p><img src="gorilla-and-baby"></p>
+<p><img src="gorilla-and-baby.jpg"></p>
 <BR>
 Гориллы любят людей и очень дружелюбны
 <BR>
-<p><img src="gorilla-kills-niggers-good-gorilla"></p>
+<p><img src="gorilla-kills-niggers-good-gorilla.jpg"></p>
 
 </body>
 </html>
