--- a/monke.html
+++ b/monke.html
@@ -3,7 +3,7 @@
 <body>
 <i>Обезьяны такие же приматы как и гориллы</i>
 <BR>
-<p><img src="gorilla-and-baby"></p>
+<p><img src="monke-sitting"></p>
 <BR>
 Обезьяны любят людей и очень дружелюбны
 <BR>
