--- a/gorilla.html
+++ b/gorilla.html
@@ -8,6 +8,7 @@
 Гориллы любят людей и очень дружелюбны
 <BR>
 <p><img src="gorilla-kills-niggers-good-gorilla.jpg"></p>
-
+<BR>
+<a href="index.html">Вернуться назад
 </body>
 </html>
