--- a/monke.html
+++ b/monke.html
@@ -11,6 +11,7 @@
 Так же их очень любит мастер Угвей из кунг-фу панды
 <BR>
 <p><img src="manki.gif"></p>
-
+<BR>
+<a href="index.html">Вернуться назад
 </body>
 </html>
