--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-<head><title>Елисеев Лабораторная 2</title></head>
+<head><title>Елисеев</title></head>
 <body>
 <b><big>Представляю вам свою первую страницу</b></big>
 <BR>Хотел бы написать про <i>клан любителей обезьян</i>
