--- a/index.html
+++ b/index.html
@@ -1,14 +1,25 @@
 <html>
-<head><title>Елисеев</title></head>
 <body>
-<b><big>Представляю вам свою первую страницу</b></big>
-<BR>Хотел бы написать про <i>клан любителей обезьян</i>
-<BR><b><i>Monke Clan</b></i> — клан любителей обезьян(во всех их образах и видах)
-<p><a href="monke.html"><img src="monke.jpg"></p>
-<BR>так же мы очень уважаем горил 
+Здесь будет представлен список возможных интересующих вас тем и краткая информация по ним
 <BR>
-<p><a href="gorilla.html"><img src="angry-gorilla.jpg"title="Горилла"><a href="gorilla.html"><img src="gorilla.jpg"></p>
+Самые распространённые виды приматов 
+<table border="2" cellpadding="3" cellspacing="2" width="100%">
+<tr>
+<th>
+<a href="monke.html">обезьяна</a>
+</th>
+<td width=90%>Обезья́ны,или «сухоносые» приматы(лат. Haplorhini),—подотряд млекопитающих из отряда приматов.</td>
+<tr>
+<th>
+<a href="gorilla.html">Горилла</a>
+</th>
+<td width=90%>Гори́ллы (лат. Gorilla) — род обезьян, включающий самых крупных современных представителей отряда приматов. Впервые описан на примере западной гориллы в 1847 году американским миссионером Томасом Севиджем</td>
+</tr>
+</table>
+<br>
+<form action="sign.html">
+<input type="submit" value="Выйти">
+</form>
 
-<BR>спасибо за внимание
 </body>
-</html>
+</html> 
