--- a/index.html
+++ b/index.html
@@ -1,25 +1,16 @@
 <html>
+<title>Вход на сайт любителей обезьян</title>
 <body>
-Здесь будет представлен список возможных интересующих вас тем и краткая информация по ним
-<BR>
-Самые распространённые виды приматов 
-<table border="2" cellpadding="3" cellspacing="2" width="100%">
-<tr>
-<th>
-<a href="monke.html">обезьяна</a>
-</th>
-<td width=90%>Обезья́ны,или «сухоносые» приматы(лат. Haplorhini),—подотряд млекопитающих из отряда приматов.</td>
-<tr>
-<th>
-<a href="gorilla.html">Горилла</a>
-</th>
-<td width=90%>Гори́ллы (лат. Gorilla) — род обезьян, включающий самых крупных современных представителей отряда приматов. Впервые описан на примере западной гориллы в 1847 году американским миссионером Томасом Севиджем</td>
-</tr>
-</table>
+<b>Войдите на сайт</b>
+<form action="main.html">
+<br>Логин<br>
+<input type="text" size="16" value="Придумайте логин">
+<BR>Пароль<br>
+<input type="text" size="16" value="Введите пароль">
 <br>
-<form action="sign.html">
-<input type="submit" value="Выйти">
+<input type="submit" value="Вход">
 </form>
-
+<form action="reg.html">
+<input type="submit" value="Регистрация" title="Перейти к регистрации">
+</form>
 </body>
-</html> 
