--- a/main.html
+++ b/main.html
@@ -1,4 +1,10 @@
 <html>
+<head>
+<style>
+body{background:url("369593.jpg");
+text-shadow: 0px 0px 1px black , 0px 0px 3px white;}
+</style>
+</head>
 <body>
 Здесь будет представлен список возможных интересующих вас тем и краткая информация по ним
 <BR>
