--- a/main.html
+++ b/main.html
@@ -3,6 +3,7 @@
 <style>
 body{background:url("369593.jpg");
 text-shadow: 0px 0px 1px black , 0px 0px 3px white;}
+a:hover{color:red;backgrond:black;}
 </style>
 </head>
 <body>
