--- a/main.html
+++ b/main.html
@@ -4,12 +4,14 @@
 body{background:url("369593.jpg");
 text-shadow: 0px 0px 1px black , 0px 0px 3px white;}
 a:hover{color:red;backgrond:black;}
+.da{color:red;margin-top:100%}
+.net{color:blue;margin-top:100%}
 </style>
 </head>
 <body>
-Здесь будет представлен список возможных интересующих вас тем и краткая информация по ним
+<p.da>Здесь будет представлен список возможных интересующих вас тем и краткая информация по ним</p>
 <BR>
-Самые распространённые виды приматов 
+<p.net>Самые распространённые виды приматов</p> 
 <table border="2" cellpadding="3" cellspacing="2" width="100%">
 <tr>
 <th>
